# curated-tokenizers

./: CMakeLists.txt  Cargo.toml  LICENSE  MANIFEST.in  README.md  azure-pipelines.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
curated_tokenizers/: _bbpe.pxd  _bbpe.pyx  _spp.pxd  _spp.pyx  _util.py  _wordpiece.pxd  _wordpiece.pyx  config.h  merges.cc  merges.hh  types.py  wordpiece.cc  wordpiece.hh
curated_tokenizers/tests/: README.robbert  compat.py  conftest.py  incorrect-merges.txt  test_bbpe_processor.py  test_sp.py  test_word_piece_processor.py  troonrede.txt
cutlery/: __init__.py  _bbpe.pyx  _spp.pxd  _spp.pyx  _wordpiece.pxd  _wordpiece.pyx  merges.cc  merges.hh  util.hh  wordpiece.cc  wordpiece.hh
cutlery/test/: test_bbpe_processor.py  test_sp.py  test_word_piece_processor.py
cutlery/tests/: robbert-merges-1000.txt  robbert-vocab-1000.json  test_bbpe_processor.py  test_sp.py  test_word_piece_processor.py
cysp/: CMakeLists.txt  __init__.py  sp.pxd  sp.pyx
cysp/test/: test_sp.py
python/cutlery/: __init__.py
python/cutlery/test/: test_sp.py  toy-word-pieces.txt
src/: lib.rs  sentencepiece_processor.rs  wordpiece_processor.rs
